# logdb-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: 01-quickstart.py  02-logging-handler.py  03-reader.py  04-async.py  05-builders.py
src/logdbhq/: __init__.py  _transport.py  batching.py  builders.py  client.py  discovery.py  errors.py  logging_handler.py  models.py  options.py  reader.py  resilience.py
tests/: test_client.py  test_logging_handler.py  test_models.py  test_resilience.py
