[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "logdbhq"
description = "LogDB SDK for Python — sync + async client with reader, stdlib logging handler, batching, and circuit breaker."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "LogDB", email = "support@logdb.com" }]
keywords = ["logdb", "logging", "observability", "sdk", "python", "async", "httpx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "httpx>=0.26,<1.0",
]

[project.urls]
Homepage = "https://docs.logdb.dev"
Documentation = "https://docs.logdb.dev"
Repository = "https://github.com/logdbhq/logdb-python"
Issues = "https://github.com/logdbhq/logdb-python/issues"
Changelog = "https://github.com/logdbhq/logdb-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.hatch.version]
path = "src/logdbhq/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/logdbhq"]

[tool.hatch.build.targets.sdist]
include = ["src/logdbhq", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
